...
      text: `${item.value}`,
      textColor: getContrastColor(sliceColor),
    };
  });

  return (
    <View style={styles.container} testID="pie-chart-container">
      <PieChart
        data={chartData}
        donut
        showText
        radius={120}
        innerRadius={60}
...
